RESOLVED FIXED295365
Fix undefined behavior for loading model types as the main resource for child frames
https://bugs.webkit.org/show_bug.cgi?id=295365
Summary Fix undefined behavior for loading model types as the main resource for child...
Ruthvik Konda
Reported 2025-07-02 15:35:14 PDT
Fix undefined behavior for loading model types as the main resource for child frames
Attachments
Ruthvik Konda
Comment 1 2025-07-02 15:35:36 PDT
Ruthvik Konda
Comment 2 2025-07-02 15:51:22 PDT
EWS
Comment 3 2025-07-03 16:54:27 PDT
Committed 297004@main (eeaa218bf729): <https://commits.webkit.org/297004@main> Reviewed commits have been landed. Closing PR #47512 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.