Fix undefined behavior for loading model types as the main resource for child frames https://bugs.webkit.org/show_bug.cgi?id=295365 rdar://144331661

Reviewed by Mike Wyrzykowski.

Disallows loading model files as the main resource for child frames.
This behavior was previously undefined so this change does not regress any existing behavior.

* LayoutTests/http/tests/download/iframe-usdz-download-expected.txt: Added.
* LayoutTests/http/tests/download/iframe-usdz-download.html: Added.
* LayoutTests/http/tests/download/resources/1.usdz: Added.
* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::decidePolicyForResponseShared):

Canonical link: https://commits.webkit.org/297004@main